# NihEngine

./: .gitignore  .gitmodules  CMakeLists.txt  NihEngine.sln  README.md
.github/workflows/: build.yml
ExternalDependencies/: CMakeLists.txt
NihEngine/: Config.h  NihEngine.cpp  NihEngine.rc  NihEngine.vcxproj  NihEngine.vcxproj.filters  NihPCH.h  Resource.h
NihEngine/Core/: NonCopyable.h
NihEngine/Core/Containers/: Array.cpp  Array.h  Vector.cpp
NihEngine/Core/Memory/: UniquePtr.cpp  UniquePtr.h
NihEngine/Core/Types/: Vector.cpp  Vector.h
NihEngine/Engine/: Engine.cpp  Engine.h  StepTimer.h
NihEngine/Singleton/: Singleton.h
NihEngine/System/: Assert.cpp  Assert.h
NihEngine/Tasks/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
NihEngine/Window/: DeviceResource.cpp  DeviceResource.h  IDeviceNotify.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Tests/: CMakeLists.txt  Test.cpp
Tests/Containers/: TestArray.cpp  TestVector.cpp
